--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.7",
+    "@trpc/client": "^10.27.1",
+    "@trpc/react-query": "^10.27.1",
+    "@trpc/server": "^10.27.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
