--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@trpc/server": "^10.27.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "zod": "^3.21.4"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
