--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@trpc/react-query": "^10.27.1",
     "@trpc/server": "^10.27.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
